@@ -1,5 +1,10 @@
 2002-08-05  Martin Baulig  <martin@gnome.org>
 
+	* statement.cs (UsageVector): Only initialize the `parameters'
+	vector if we actually have any "out" parameters.
+
+2002-08-05  Martin Baulig  <martin@gnome.org>
+
 	* expression.cs (Binary.ResolveOperator): When combining delegates,
 	they must have the same type.
 
